fixing overflow on scroll for homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,10 +100,9 @@ p{
 }
 .homeContainer {
     text-align: center;
-    width:60%;
-}
-.homeContainer h1{
-    margin-top:100px;
+    width:65%;
+    margin:0 auto;
+    padding:100px 0 0 0;
 }
 .homeLogo img {
 	width:150px;
@@ -124,7 +123,7 @@ p{
 	position:absolute;
 	top:30px;
 	left:40px;
-	width:36%;
+	width:38%;
 	content:"since";
     text-align: right;
     
@@ -134,7 +133,7 @@ p{
 	position:absolute;
 	top:30px;
 	right:40px;
-	width:36%;
+	width:38%;
 	content:"1995";
     text-align: left;
 }
